zero-schema-macros/tests/ui/fail/41_optional_primitive.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<u8>,
}

fn main() {}
